--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/elements": "^2.4.3",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.14",
+    "@react-navigation/stack": "^7.3.3",
     "expo": "~53.0.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-linear-gradient": "^2.8.3"
+    "react-native-fontawesome": "^7.0.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
