--- a/package.json
+++ b/package.json
@@ -11,31 +11,30 @@
     "test": "jest"
   },
   "dependencies": {
-
     "@react-native-async-storage/async-storage": "^1.24.0",
-
-    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-navigation/elements": "^2.4.3",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.3.3",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "expo": "~53.0.0",
     "expo-constants": "~17.1.6",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
+    "express": "^5.1.0",
     "firebase": "^11.9.1",
-
     "moment": "^2.30.1",
+    "mongoose": "^8.16.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-date-picker": "^5.0.13",
     "react-native-fontawesome": "^7.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
