--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/elements": "^2.4.3",
-    "@react-navigation/native": "^7.1.10",
-    "@react-navigation/native-stack": "^7.3.14",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.3.3",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "expo": "~53.0.0",
+    "expo": "^54.0.7",
     "expo-constants": "~17.1.6",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.0",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.6",
     "expo-status-bar": "~2.2.3",
     "express": "^5.1.0",
     "firebase": "^11.9.1",
     "moment": "^2.30.1",
     "mongoose": "^8.16.0",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-fontawesome": "^7.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
@@ -49,13 +49,13 @@
     "@react-native/metro-config": "0.79.2",
     "@react-native/typescript-config": "0.79.2",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4"
+    "typescript": "~5.8.3"
   },
   "engines": {
     "node": ">=18"
